header-footer-section ok

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ import Button from "./Button.astro"
       </p>
 
       <nav>
-        <ul class="flex  justify-center gap-6 text-sm">
+        <ul class="flex justify-center gap-6 text-sm">
           <li>
             <a 
               href="/m-legales" 
@@ -20,7 +20,7 @@ import Button from "./Button.astro"
             </a>
           </li>
           <li>
-            <a id="manage-cookies" class="text-gray-600 dark:text-gray-400 font-medium transition-colors" >
+            <a  aria-label="gerer les cookies" id="manage-cookies" class="text-gray-600 dark:text-gray-400 font-medium transition-colors" >
               Gérer mes cookies
             </a>
           </li>
