--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Analytics from "../components/Analytics.astro";
 import "../styles/global.css";
+import "../styles/effects.css";
 const GA_ID = import.meta.env.PUBLIC_GA_ID;
 ---
 
@@ -31,8 +32,9 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
     </script>
   </head>
   <body
-    class="min-h-screen flex flex-col bg-gradient-to-br from-blue-50 via-white to-purple-50 dark:from-gray-900 dark:via-purple-900/20 dark:to-blue-900/20 transition-colors duration-500 relative overflow-x-hidden"
+    class="min-h-screen flex flex-col transition-colors duration-500 relative overflow-x-hidden"
   >
+  
     <div class="relative z-10 flex flex-col min-h-screen">
       <Header />
       <main class="flex-grow pt-16">
@@ -41,6 +43,6 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
       <Analytics />
       <Footer />
     </div>
-    <script is:inline define:vars={{ GA_ID }} type="module" src="/script/banner-cookies.js"></script>"
+    <script is:inline define:vars={{ GA_ID }} type="module" src="/script/banner-cookies.js"></script>
   </body>
 </html>
