--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Button from "../components/Button.astro";
+import SocialLinks from "../components/SocialLinks.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 bg-slate-400 dark:bg-slate-950 lg:px-8 py-20">
     <!-- Hero Section -->
     <div class="text-center mb-20">
       <h1
@@ -18,11 +19,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     </div>
 
     <!-- Sections -->
-    <div class="space-y-32">
+    <div class="space-y-20">
       <section
-        id="section1"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="section1">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 1
@@ -32,9 +31,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </section>
 
       <section
-        id="section2"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="section2">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 2
@@ -44,9 +41,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </section>
 
       <section
-        id="section3"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="section3">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 3
@@ -56,9 +51,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </section>
 
       <section
-        id="section4"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="section4">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 4
@@ -68,9 +61,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </section>
 
       <section
-        id="section5"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="section5">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 5
@@ -80,18 +71,25 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </section>
 
       <section
-        id="contact"
-        class="min-h-screen flex items-center justify-center bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-3xl p-8 md:p-16 shadow-xl"
-      >
+        id="contact">
         <div class="text-center text-gray-600 dark:text-gray-300">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Contacts
           </h2>
-          <div>contacts</div>
-          <div>reseaux</div>
-        
-           <a href="https://calendly.com/isabellelamarre62/premier">prendre rdv</a>
-       
+          <div class="flex flex-col m-8 ">
+            <a class=" text-gray-800  dark:text-white"
+            href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site=Bonjour%20Isabelle,"
+            aria-label="Envoyer un email à Isabelle"
+            >lalicornecosmique62@gmail.com</a>
+            <a class=" text-gray-800  dark:text-white" href="tel:+33682157497" aria-label="Appeler Isabelle au 06 82 15 74 97 "
+            >06 82 15 74 97</a>
+          </div>
+          <div>
+            <SocialLinks size="lg"/>
+          </div>
+        <div class=" mt-10">
+           <Button class="text-gray-800 dark:text-white" target="_blank" rel="noopener noreferrer" href="https://calendly.com/isabellelamarre62/premier">prendre rdv</Button>
+       </div>
         </div>
       </section>
     </div>
