ajout gradient bouton

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 bg-slate-400 dark:bg-slate-950 lg:px-8 py-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
     <!-- Hero Section -->
     <div class="text-center mb-20">
       <h1
-        class="text-gradient text-5xl md:text-6xl font-bold text-gray-900 dark:text-white mb-6 animate-fade-in"
+        class="text-gradient text-5xl md:text-6xl font-bold mb-6 animate-fade-in"
       >
         Ici prochainement mon Portfolio
       </h1>
@@ -50,7 +50,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
       </section>
 
-      <section
+      <section 
         id="section4">
         <div class="text-center">
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
@@ -78,17 +78,17 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           </h2>
           <div class="flex flex-col m-8 ">
             <a class=" text-gray-800  dark:text-white"
-            href="mailto:lalicornecosmique62@gmail.com?subject=Contact depuis le site=Bonjour%20Isabelle,"
-            aria-label="Envoyer un email à Isabelle"
+            href="mailto:lalicornecosmique62@gmail.com? subject=Contact depuis le site=Bonjour%20Isabelle,"
+            aria-label="lalicornecosmique62@gmail.com"
             >lalicornecosmique62@gmail.com</a>
-            <a class=" text-gray-800  dark:text-white" href="tel:+33682157497" aria-label="Appeler Isabelle au 06 82 15 74 97 "
+            <a class=" text-gray-800  dark:text-white" href="tel:+33682157497" aria-label="06 82 15 74 97 "
             >06 82 15 74 97</a>
           </div>
           <div>
             <SocialLinks size="lg"/>
           </div>
         <div class=" mt-10">
-           <Button class="text-gray-800 dark:text-white" target="_blank" rel="noopener noreferrer" href="https://calendly.com/isabellelamarre62/premier">prendre rdv</Button>
+           <Button variant="gradient" target="_blank" rel="noopener noreferrer" href="https://calendly.com/isabellelamarre62/premier">prendre rdv</Button>
        </div>
         </div>
       </section>
