--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -8,10 +8,10 @@ import Button from "./Button.astro"
       Ce site utilise des cookies pour analyser le trafic.
     </p>
     <div class="flex flex-wrap justify-center gap-2">
-      <Button id="accept-all" >
+      <Button variant="validez" id="accept-all" >
         Accepter
       </Button>
-      <Button id="decline-all" >
+      <Button variant="supprimer" id="decline-all" >
         Refuser
       </Button>
     </div>
