--- a/src/pages/m-legales.astro
+++ b/src/pages/m-legales.astro
@@ -129,9 +129,7 @@ import Button from "../components/Button.astro";
         Conformément au Règlement Général sur la Protection des Données (RGPD),
         vous disposez d’un droit d’accès, de rectification et de suppression de
         vos données. Pour toute demande, vous pouvez écrire à :
-        <a href="mailto:lalicornecosmique62@gmail.com"
-          >lalicornecosmique62@gmail.com</a
-        >.
+        <a href="mailto:lalicornecosmique62@gmail.com">lalicornecosmique62@gmail.com</a>
       </p>
   
       <h2>
@@ -152,8 +150,8 @@ import Button from "../components/Button.astro";
         des tribunaux français.
       </p>
     </section>
-    <br/>
-    <br/>
-    <Button href="/" variant="retour" >← Retour à l’accueil</Button>
+  <div class="mt-12 text-center">
+    
+    <Button href="/" variant="gradient" >← Retour à l’accueil</Button>
   </div>
 </BaseLayout>
