--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
             Section 1
           </h2>
+          <hr class="hr-gradient"/>
           <p class="text-gray-600 dark:text-gray-300">Contenu à venir...</p>
         </div>
       </section>
