--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -198,16 +198,14 @@ a:hover::after {
 }
 
 /* gradient */
-
 .hr-gradient {
     border: none;
     height: 2px;
     margin: 2rem 0;
-    background: linear-gradient(90deg, #6c5ce7, #00b894, #ffeaa7, #ff7675);
+    background: var(--gradient-secondary);
     background-size: 300% 100%;
     animation: slide-gradient 6s linear infinite;
     border-radius: 999px;
-
     -webkit-mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, transparent);
     mask-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, transparent);
 }
